--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ DerivedData
 *.ipa
 *.xcuserstate
 *.o
+
+**/Builds/
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
